--- a/external-resources/templates/EnterpriseTemplate.html
+++ b/external-resources/templates/EnterpriseTemplate.html
@@ -10,6 +10,7 @@ faxesLabel, foreingcapital, foreingcapitalLabel, goods, goodsLabel, phones, phon
 title, titleLabel, urls, urlsLabel, workplaces, workplacesLabel, ypurl, ypurlLabel-->
 <h1>{{title}}</h1>
 <table>
+    <tr><th>{{idnoLabel}}</th><td>{{idno}}</td></tr>
     <tr><th>{{postalcodeLabel}}</th><td>{{postalcode}}</td></tr>
     <tr><th>{{addressLabel}}</th><td>{{address}}</td></tr>
     <tr><th>{{phonesLabel}}</th><td>{{phones}}</td></tr>
