--- a/external-resources/templates/EnterpriseTemplate.html
+++ b/external-resources/templates/EnterpriseTemplate.html
@@ -17,7 +17,7 @@ title, titleLabel, urls, urlsLabel, workplaces, workplacesLabel, ypurl, ypurlLab
     <tr><th>{{faxesLabel}}</th><td>{{faxes}}</td></tr>
     <tr><th>{{emailsLabel}}</th><td><ul>{% [emails] <li><a href="mailto:{{emails}}">{{emails}}</a></li> %}</ul></td></tr>
     <tr><th>{{urlsLabel}}</th><td><ul>{% [urls] <li><a href="http://{{urls}}">{{urls}}</a></li> %}</ul></td></tr>
-    <tr><th>{{contactpersonLabel}}</th><td>{% [contactperson] {{personPosition}} {{personTitle}} {{personPhones}} %}</td></tr>
+    <tr><th>{{contactpersonLabel}}</th><td>{% [contactperson] {{personPosition}} {{personTitle}}. {{personPhones}} %}</td></tr>
     <tr><th>{{brandsLabel}}</th><td>{{brands}}</td></tr><tr><th>{{businessentitytypeLabel}}</th><td>{{businessentitytype}}</td></tr>
     <tr><th>{{foreingcapitalLabel}}</th><td>{{foreingcapital}}</td></tr>
     <tr><th>{{goodsLabel}}</th><td><ul>{% [goods] <li>{{goods}}</li> %}</ul></td></tr>
